--- a/css/css.css
+++ b/css/css.css
@@ -35,7 +35,7 @@ h2{
     font-size: 25px;
 }
 .search{
-    display: inline;
+    display: inline-block;
     width: 400px;
     height: 42px;
     padding: 15px;
@@ -43,6 +43,8 @@ h2{
     border: none;
     border-radius: 8px;
     font-size: 15px;
+    position: relative;
+    bottom: 0px;
 }
 .search::placeholder{
     color: rgb(168, 166, 166);
