--- a/css/css.css
+++ b/css/css.css
@@ -31,8 +31,12 @@ h2{
     color: white;
     font-size: 25px;
 }
+.search_cont{
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+}
 .search{
-    display: inline-block;
     width: 400px;
     height: 42px;
     padding: 15px;
@@ -40,23 +44,18 @@ h2{
     border: none;
     border-radius: 8px;
     font-size: 15px;
-    position: relative;
-    bottom: 0px;
 }
 .search::placeholder{
     color: rgb(168, 166, 166);
 }
  .btn{
-    display: inline-block;
-    position: relative;
-    top: 18px;
-    height: 46px;
+    margin-left: -8px; 
+    height: 42px;
     width: 48px;
     border-radius: 0 12px 12px 0;
     background: black url(../images/icon-arrow.svg) no-repeat 15px 15px;
-    margin-left: -10px;
     border: none;
-    
+    cursor: pointer;
 }
 .banner{
     background-color: white;
