--- a/css/css.css
+++ b/css/css.css
@@ -49,8 +49,8 @@ h2{
     color: rgb(168, 166, 166);
 }
  .btn{
-    margin-left: -8px; 
-    height: 42px;
+    margin: -3px 0 0 -8px; 
+    height: 48px;
     width: 48px;
     border-radius: 0 12px 12px 0;
     background: black url(../images/icon-arrow.svg) no-repeat 15px 15px;
