--- a/css/css.css
+++ b/css/css.css
@@ -44,18 +44,31 @@ h2{
     border: none;
     border-radius: 8px;
     font-size: 15px;
+    box-shadow: 5px 15px 10px rgba(10, 10, 10, 0.339);
 }
 .search::placeholder{
     color: rgb(168, 166, 166);
 }
+.busqueda_cont{
+    display: inline-block;
+    position: relative;
+}
  .btn{
-    margin: -3px 0 0 -8px; 
-    height: 48px;
-    width: 48px;
-    border-radius: 0 12px 12px 0;
+    position: absolute;
+    height: 110%;
+    width: 45px;
+    right: -15px;    
+    top: -2px;
+    border-top-right-radius: 15px;
+    border-bottom-right-radius: 15px;
     background: black url(../images/icon-arrow.svg) no-repeat 15px 15px;
     border: none;
+    outline: none;
     cursor: pointer;
+    transition: all 0.1s ease-in-out; 
+}
+.btn:active{
+    transform: translateX(7px);
 }
 .banner{
     background-color: white;
